added Base64 encode/decode support + SPADE_COCO example